--- a/styles/layout/scroller.scss
+++ b/styles/layout/scroller.scss
@@ -19,9 +19,7 @@ $track-bg: transparent; //get($bg, "page");
 
   &-thumb {
     border-radius: get($radius, "max");
-    box-sizing: content-box;
     box-shadow: inset 0 0 6px 6px $thumb-bg;
-    background: unset;
     border: solid 3px transparent;
     z-index: 0;
     &:hover {
@@ -29,16 +27,16 @@ $track-bg: transparent; //get($bg, "page");
     }
   }
 
-  &-corner {
-    background: $track-bg;
-  }
+  // &-corner {
+  //   background: $track-bg;
+  // }
 
-  &-track {
-    background: $track-bg;
+  // &-track {
+  //   background: $track-bg;
 
-    &-piece {
-      background: $track-bg;
-      // width: 6px;
-    }
-  }
+  //   &-piece {
+  //     background: $track-bg;
+  //     // width: 6px;
+  //   }
+  // }
 }
