--- a/styles/protyle/wysiwyg.scss
+++ b/styles/protyle/wysiwyg.scss
@@ -9,7 +9,7 @@ $item-pad: 3px 2px;
   &-content {
     overflow: overlay;
 
-    .layout__center &[data-fullwidth="true"] {
+    &[data-fullwidth="true"] {
       .protyle {
         &-background {
           &__img .protyle-icons {
@@ -22,7 +22,7 @@ $item-pad: 3px 2px;
       }
     }
 
-    .layout__center &:not([data-fullwidth="true"]) {
+    &:not([data-fullwidth="true"]) {
       .protyle {
         &-background {
           &__iconw {
@@ -34,6 +34,7 @@ $item-pad: 3px 2px;
         }
         &-title {
           margin: 0 $padding !important;
+          width: auto !important;
         }
         &-wysiwyg {
           padding-left: $padding !important;
@@ -72,7 +73,6 @@ $item-pad: 3px 2px;
 
   //反链计数
   &-attr {
-
     &--refcount {
       top: 50%;
       right: -50%;
