fix: :bug: 修复窗口失焦时页签文字颜色的问题

--- a/styles/layout/tab-bar.scss
+++ b/styles/layout/tab-bar.scss
@@ -84,12 +84,9 @@ $btn-w: get($component-size, "small");
       }
 
       > .item__text {
-        @include color("focus");
-
-        .layout__wnd--active & {
-          @include color("focus");
-        }
+        @include color("focus", true);
       }
+      
       .item__close {
         @include item-tran("focus");
         svg {
