feat: :sparkles: 将页签栏固定在顶栏，并修改相应布局样式

--- a/styles/common/utils.scss
+++ b/styles/common/utils.scss
@@ -92,8 +92,8 @@
   }
 }
 
-@mixin item-tran($type) {
-  @include item($type);
+@mixin item-tran($type, $start: 1, $important: fault) {
+  @include item($type, $start, $important);
   background-color: transparent;
 }
 
