--- a/styles/layout/wnd.scss
+++ b/styles/layout/wnd.scss
@@ -1,4 +1,3 @@
-
 @use "../common" as *;
 @use "../dialog/search";
 @use "../component/list";
@@ -40,8 +39,9 @@ $wnd-transition: all $time get($transition-function, "fast") 0s;
   min-height: 10% !important;
   margin: $interval;
   border-radius: get($radius, "medium");
-  transition: all $time get($transition-function, "easing") 0s;
+  transition: all $time get($transition-function, "fast") 0s;
   background-color: $wnd-bg;
+  border: $fn-border;
 }
 
 //边窗
@@ -63,7 +63,7 @@ $wnd-transition: all $time get($transition-function, "fast") 0s;
     // 隐藏的边窗
     > .fn__none:not(.layout__resize) {
       display: flex !important;
-      animation: close $time * 2 forwards ease-in-out;
+      animation: close $time * 2 forwards get($transition-function, "fast");
 
       > div[data-type="wnd"] {
         @include wnd;
@@ -76,7 +76,7 @@ $wnd-transition: all $time get($transition-function, "fast") 0s;
   //左侧边窗特殊处理
   > .fn__flex-shrink:not(.layout__center) {
     > .fn__none:not(.layout__resize) {
-      animation: close $time * 2 forwards ease-in-out;
+      animation: close $time * 2 forwards get($transition-function, "fast");
 
       > div[data-type="wnd"] {
         transform: $scale;
@@ -117,6 +117,10 @@ $wnd-transition: all $time get($transition-function, "fast") 0s;
     @include wnd;
 
     // 标签搜索页面
+    .fn__flex-column[style*="min-height"][style*="50%"] > .fn__flex:first-child{
+      padding: 8px !important;
+    }
+
     // 搜索历史按钮
     #searchHistoryBtn {
       @include component();
@@ -128,7 +132,8 @@ $wnd-transition: all $time get($transition-function, "fast") 0s;
         }
 
         &:last-child {
-          @include svg(8px);
+          @include svg(8px, $important: true);
+          margin-left: 2px;
         }
       }
     }
@@ -142,6 +147,7 @@ $wnd-transition: all $time get($transition-function, "fast") 0s;
     #globalSearchResult {
       @include component();
       margin: 0 $fn-space $interval !important;
+      padding: 0 8px 4px;
       cursor: unset;
       background-color: transparent !important; //get($bg,"component");
     }
