--- a/styles/dialog/keymapList.scss
+++ b/styles/dialog/keymapList.scss
@@ -1,4 +1,3 @@
-
 @use "../common" as *;
 @use "../component/list";
 
@@ -23,9 +22,14 @@
         @include icon-btn("component", 24px, get($icon, "small"));
       }
     }
-    
-    &--border>ul li{
-      margin: 0;
+
+    &--border > ul {
+      li {
+        margin: 0 !important;
+      }
+      > ul::before {
+        left: -21px - 34px;
+      }
     }
   }
 }
