fix: :bug: 优化页签钉住时的样式

--- a/styles/common/css-var.scss
+++ b/styles/common/css-var.scss
@@ -12,7 +12,7 @@
   --b3-theme-background-light: rgb(var(--page-2));
   --b3-theme-surface: rgb(var(--base-1));
   --b3-theme-surface-light: rgb(var(--base-1));
-  --b3-theme-surface-lighter: rgb(var(--base-1));
+  --b3-theme-surface-lighter: rgb(var(--border-3));
   --b3-theme-error: rgb(var(--error-base));
 
   // 文字颜色
