--- a/styles/panel/sy-backlink.scss
+++ b/styles/panel/sy-backlink.scss
@@ -15,7 +15,7 @@
       padding-bottom: 5px !important;
       [data-node-id] {
         margin: 4px 0 !important;
-        // font-size: 14px !important;
+        font-size: 14px;
       }
     }
   }
