fix: :bug: 修复钉住页签的样式问题

--- a/styles/layout/tab-bar.scss
+++ b/styles/layout/tab-bar.scss
@@ -196,6 +196,7 @@ $btn-w: get($component-size, "small");
 
       .fn__flex-1 {
         width: $item-pad;
+        min-width: $item-pad;
       }
 
       &__icon {
@@ -223,6 +224,7 @@ $btn-w: get($component-size, "small");
           &__text {
             margin: 0;
             padding: 0;
+            min-width: 0px;
           }
         }
       }
