--- a/styles/layout/tab-bar.scss
+++ b/styles/layout/tab-bar.scss
@@ -184,6 +184,7 @@ $btn-w: get($component-size, "small");
       animation: item-w 0.2s ease-in-out;
       height: $item-h;
       position: relative;
+      -webkit-app-region: no-drag;
 
       &[style*="width"] {
         animation: item-w 0.2s ease-in-out;
@@ -266,12 +267,14 @@ $btn-w: get($component-size, "small");
         border-left: $fn-border-2;
         border-right: $fn-border-2;
         border-radius: unset;
+        -webkit-app-region: drag;
 
         &::before {
           display: none;
         }
         .item__close {
           @include item("base", $important: true);
+          -webkit-app-region: no-drag;
           &[data-type="more"] {
             right: 8px;
           }
