fix: :bug: 优化已关闭的笔记本按钮样式

--- a/styles/panel/sy-file.scss
+++ b/styles/panel/sy-file.scss
@@ -12,7 +12,7 @@
     margin: 8px 8px 0px;
 
     > .b3-list-item {
-      margin-bottom: 8px;
+      margin-bottom: 8px !important;
     }
 
     > ul {
