fix: :bug: 优化反链界面字号

--- a/styles/panel/sy-backlink.scss
+++ b/styles/panel/sy-backlink.scss
@@ -15,7 +15,9 @@
       padding-bottom: 5px !important;
       [data-node-id] {
         margin: 4px 0 !important;
-        font-size: 14px;
+        [contenteditable] {
+          font-size: 90%;
+        }
       }
     }
   }
