fix: :bug: 修复列表嵌套标题块时辅助线的样式问题

--- a/styles/protyle/block/list.scss
+++ b/styles/protyle/block/list.scss
@@ -39,6 +39,11 @@ $done-color: get($text, "placeholder");
         border-color: $list-border;
         left: -17.5px;
       }
+      &[data-type="NodeHeading"]::before {
+        top: -100%;
+        bottom: -100%;
+        height: auto !important;
+      }
     }
 
     &:hover {
