--- a/styles/panel/sy-file.scss
+++ b/styles/panel/sy-file.scss
@@ -23,6 +23,5 @@
 
 // 文档树笔记本
 [data-type="navigation-root"].b3-list-item {
-  background-color: get($bg, "page", 2);
-  font-weight: 500;
+  @include list-root();
 }
